Prevent Search and Donate from touching on small screen

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -387,10 +387,11 @@ label[for="searchbox"]{
   padding-left: 18px;
 }
 
-@media (min-width: 360px) {
+@media (min-width: 390px) {
   #search-and-donate {
     flex-direction: row;
     margin: 10px 30px 0 30px;
+    gap: 30px;
   }
   #searchform, .donate {
     margin: 0;
@@ -406,6 +407,7 @@ label[for="searchbox"]{
     right: 0;
     margin-top: 0;
     height: 120px;
+    gap: 0;
   }
   #searchform, .donate a {
     width: 200px;
